<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:id="@+id/headertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hello_xyz"
        android:textAllCaps="true"
        android:textColor="@color/charcoalblack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelImageview" />

    <Button
        android:id="@+id/scanQR"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_round_button1"
        android:text="@string/scan_to_reviews"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/viewreviews"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/edit_round_button"
        android:text="@string/search_reviews"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headertext"
        app:srcCompat="@drawable/fui_idp_button_background_google" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/greenblue"
        android:text="@string/points"
        android:textSize="@dimen/textsize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/levelImageview"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/l1" />

    <Button
        android:id="@+id/redeemtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenblue"
        android:gravity="center"
        android:text="Redeem My Points"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="Points"
        android:textColor="@color/charcoalblack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/points"
        app:layout_constraintStart_toStartOf="@+id/points"
        app:layout_constraintTop_toBottomOf="@+id/points" />

    <TextView
        android:id="@+id/level_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/level"
        android:textColor="@color/greenblue"
        android:gravity="center_horizontal"
        android:textSize="@dimen/textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/levellink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="Level"
        android:textColor="@color/charcoalblack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/level_textView"
        app:layout_constraintStart_toStartOf="@+id/level_textView"
        app:layout_constraintTop_toBottomOf="@+id/level_textView" />

    <TextView
        android:id="@+id/reviewtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textColor="@color/greenblue"
        android:text="@string/reviews"
        android:textSize="@dimen/textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/level_textView"
        app:layout_constraintStart_toEndOf="@+id/points"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/reviewlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="Reviews"
        android:textColor="@color/charcoalblack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/reviewtextview"
        app:layout_constraintStart_toStartOf="@+id/reviewtextview"
        app:layout_constraintTop_toBottomOf="@+id/reviewtextview" />


</android.support.constraint.ConstraintLayout>